feat: implement account aggregate